#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([inly], [1.0], [dano306@qq.com])
AC_CONFIG_SRCDIR([src/libinly/CInly.cpp])

AM_CONFIG_HEADER([inly_config.h:inly_config.h.in])
AH_TOP([#ifndef	__FILE_INLY_CONFIG_H__
#define __FILE_INLY_CONFIG_H__
])
AH_BOTTOM([#endif	//__FILE_INLY_CONFIG_H__
])

AM_INIT_AUTOMAKE(inly, 1.0)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
#动态链接库，如果是静态链接库，使用AC_PROC_RANLIB
AC_PROG_LIBTOOL		# http://www.ibm.com/developerworks/cn/aix/library/1007_wuxh_libtool/

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL

# Checks for library functions.

AC_OUTPUT([support-files/inly.pc
Makefile
src/libinly/Makefile
src/inly_tool/Makefile
])
